--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -103,3 +103,10 @@ img {
 #salvar {
   background-color: #2c88d9;
 }
+
+#labelNome,
+#labelCpf,
+#labelEmail {
+  display: flex;
+  justify-content: space-between;
+}
